# ansermodelling

./: .gitignore  README.md  Untitled.ipynb  build_training_data.py  demo.ipynb  notes.txt  pyproject.toml
.ipynb_checkpoints/: build_field_generator-checkpoint.py  main-checkpoint.py
anser/: __init__.py  build_field_generator.py  coil_dimension_calc.py  consts.py  field_coil_calc.py  forward_model.py  local_to_global.py  normal_vector.py  sensor_objective_function.py
data/: __init__.py  anser_dataset.py  build_dataset.py  dataset.npz
demos/: Backward Model.ipynb  Backward demo.ipynb  FFNN_demo.ipynb  FFNN_demo_noisy.ipynb  FFNN_demo_normalised.ipynb  Forward Model Demo.ipynb  Forward NN.ipynb  LM_demo.ipynb  Untitled.ipynb  demo.ipynb  physics_demo.ipynb
models/: FFNN_network.py  LM_solve.py  __init__.py  train.py
pythoncode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
report/: references.bib
report/background/: background.tex
report/maths/: maths.tex
report/simulation/: simulation.tex
report/solving_maths/: solving_maths.tex
