[project]
name = "pythoncode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]

[tool.setuptools.packages.find]
include = ["anser*"]
